gcc/testsuite/g++.dg/pph/d1chained.cc
#include "c1chained1.h"
#include "c1chained2.h" // { dg-error "fails macro validation" }
int x = TWO;
